--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,8 @@
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
+    "global": "^4.3.2",
+    "history": "^4.7.2",
     "html-webpack-plugin": "2.29.0",
     "node-sass": "^4.9.0",
     "object-assign": "4.1.1",
@@ -36,6 +38,13 @@
     "react": "^16.3.2",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.3.2",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.2.2",
+    "react-router-redux": "^5.0.0-alpha.9",
+    "reactotron-react-js": "^2.0.0-beta.3",
+    "reactotron-redux": "^2.0.0-beta.3",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.2.0",
     "resolve": "1.6.0",
     "sass-loader": "^7.0.1",
     "style-loader": "0.19.0",
@@ -57,5 +66,8 @@
   },
   "eslintConfig": {
     "extends": "react-app"
+  },
+  "devDependencies": {
+    "redux-logger": "^3.0.6"
   }
 }
