--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,95 @@
-# This file is expected by Heroku.
-
--r requirements/production.txt
+alabaster==0.7.10
+argon2-cffi==18.1.0
+attrs==18.1.0
+awesome-slugify==1.6.5
+Babel==2.5.3
+backcall==0.1.0
+boto3==1.7.19
+botocore==1.10.19
+certifi==2018.4.16
+cffi==1.11.5
+chardet==3.0.4
+Collectfast==0.6.2
+coreapi==2.3.3
+coreschema==0.0.4
+coverage==4.5.1
+decorator==4.3.0
+defusedxml==0.5.0
+Django==2.0.5
+django-allauth==0.36.0
+django-anymail==2.2
+django-cors-headers==2.2.0
+django-coverage-plugin==1.5.0
+django-crispy-forms==1.7.2
+django-debug-toolbar==1.9.1
+django-environ==0.4.4
+django-extensions==2.0.7
+django-model-utils==3.1.2
+django-redis==4.9.0
+django-rest-auth==0.9.3
+django-storages==1.6.6
+django-taggit==0.22.2
+django-taggit-serializer==0.1.5
+django-test-plus==1.0.22
+djangorestframework==3.8.2
+djangorestframework-jwt==1.11.0
+docutils==0.14
+factory-boy==2.11.1
+Faker==0.8.13
+flake8==3.5.0
+gunicorn==19.8.1
+idna==2.6
+imagesize==1.0.0
+ipdb==0.11
+ipython==6.4.0
+ipython-genutils==0.2.0
+itypes==1.1.0
+jedi==0.12.0
+Jinja2==2.10
+jmespath==0.9.3
+MarkupSafe==1.0
+mccabe==0.6.1
+more-itertools==4.1.0
+oauthlib==2.0.7
+packaging==17.1
+parso==0.2.0
+pexpect==4.5.0
+pickleshare==0.7.4
+Pillow==5.1.0
+pkg-resources==0.0.0
+pluggy==0.6.0
+prompt-toolkit==1.0.15
+psycopg2-binary==2.7.4
+ptyprocess==0.5.2
+py==1.5.3
+pycodestyle==2.3.1
+pycparser==2.18
+pyflakes==1.6.0
+Pygments==2.2.0
+PyJWT==1.6.3
+pyparsing==2.2.0
+pytest==3.5.1
+pytest-django==3.2.1
+pytest-sugar==0.9.1
+python-dateutil==2.7.3
+python3-openid==3.1.0
+pytz==2018.4
+redis==2.10.6
+regex==2018.2.21
+requests==2.18.4
+requests-oauthlib==0.8.0
+s3transfer==0.1.13
+simplegeneric==0.8.1
+six==1.11.0
+snowballstemmer==1.2.1
+Sphinx==1.7.4
+sphinxcontrib-websupport==1.0.1
+sqlparse==0.2.4
+termcolor==1.1.0
+text-unidecode==1.2
+traitlets==4.3.2
+Unidecode==0.4.21
+uritemplate==3.0.0
+urllib3==1.22
+wcwidth==0.1.7
+Werkzeug==0.14.1
