--- a/client/package.json
+++ b/client/package.json
@@ -45,6 +45,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
+    "react-textarea-autosize": "^6.1.0",
     "reactotron-react-js": "^2.0.0-beta.3",
     "reactotron-redux": "^2.0.0-beta.3",
     "redux": "^4.0.0",
